<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yuriystr.wordgame.MainActivity">

    <RelativeLayout
        android:layout_width="361dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="7dp">

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="86dp"
            android:onClick="onClickNewGame"
            android:text="@string/new_game"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="136dp" />

        <Button
            android:id="@+id/buttonLoadGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/buttonNewGame"
            android:layout_below="@+id/buttonNewGame"
            android:layout_marginTop="14dp"
            android:onClick="onClickLoadGame"
            android:text="@string/load_game"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="180dp" />

        <Button
            android:id="@+id/buttonOptions"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_alignEnd="@+id/buttonNewGame"
            android:layout_below="@+id/buttonLoadGame"
            android:layout_marginTop="14dp"
            android:onClick="onClickOptions"
            android:text="@string/options"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="232dp" />

        <Button
            android:id="@+id/buttonQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/buttonOptions"
            android:layout_alignStart="@+id/buttonLoadGame"
            android:layout_below="@+id/buttonOptions"
            android:layout_marginTop="17dp"
            android:onClick="onClickQuit"
            android:text="@string/quit" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
