<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yuriystr.wordgame.NewGameActivity">

    <RelativeLayout
        android:layout_width="359dp"
        android:layout_height="500dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="5dp">

        <Button
            android:id="@+id/buttonBackToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickBack"
            android:text="@string/back_to_menu"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="424dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="46dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonBackToMenu"
            android:layout_alignBottom="@+id/buttonBackToMenu"
            android:layout_marginEnd="42dp"
            android:layout_toStartOf="@+id/buttonBackToMenu"
            android:text="@string/save" />

        <TextView
            android:id="@+id/textViewComputerWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:text="ТУТ БУДЕТ 5 ПОСЛЕДНИХ СЛОВ" />

        <TextView
            android:id="@+id/textViewComputerWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewComputerWord"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="88dp"
            android:text="ТУТ БУДЕТ СЛОВО КОМПЬЮТЕРА" />

        <EditText
            android:id="@+id/textPlayerWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewComputerWord"
            android:layout_below="@+id/textViewComputerWord"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="СЮДА ВВОДИТЬ" />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/confirm" />

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonConfirm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="ТУТ ОШИБКИ" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
